@@ -46,6 +46,7 @@ TODO_CODECS_BASIC_TABLE+=inter/TO_ALIAS
 TODO_CODECS_BASIC_TABLE+=inter/UNIX
 TODO_CODECS_BASIC_TABLE+=inter/UPPER
 TODO_CODECS_BASIC_TABLE+=inter/UPSIDEDOWN
+TODO_CODECS_BASIC_TABLE+=inter/WIDTH
 TODO_CODECS_BASIC_TABLE+=inter/WIN
 TODO_CODECS_BASIC_TABLE+=inter/ZHCN
 TODO_CODECS_BASIC_TABLE+=inter/ZHTW
@@ -119,6 +120,7 @@ TODO_CODECS_BASIC_CALLBACK+=inter/AMBIGUOUS-UNPAD
 TODO_CODECS_BASIC_CALLBACK+=inter/BIG5-DEFRAG
 TODO_CODECS_BASIC_CALLBACK+=inter/SCORE
 TODO_CODECS_BASIC_CALLBACK+=inter/SCORE_TRAIN
+TODO_CODECS_BASIC_CALLBACK+=inter/WIDTH
 TODO_CODECS_BASIC_CALLBACK+=to/3F
 TODO_CODECS_BASIC_CALLBACK+=to/ANSI-CONTROL
 TODO_CODECS_BASIC_CALLBACK+=to/ASCII-ESCAPED-UNICODE
